test/libsolidity/syntaxTests/literals/invalid_hex_number.sol
contract C {
    uint x = 0x1000abcdefgh;
}
// ----
// ParserError 8936: (26-38): Identifier-start is not allowed at end of a number.
